add window bat script and add launcher config